# MIDILED_IDF

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  midi_task.cpp  midi_task.h  tusb_config.h  usb_descriptors.c
trash/: midi_task.c
